user creat and user datatables

--- a/e_reimbursement/templates/_message.html
+++ b/e_reimbursement/templates/_message.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-lg-12 message-container">
     {% for message in messages %}
-      <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %} alert-dismissible" data-auto-dismiss>
+      <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %} alert-dismissible my-4" data-auto-dismiss>
         {{ message|safe }}
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
           <span aria-hidden="true">&times;</span>
