--- a/e_reimbursement/templates/users/user_list.html
+++ b/e_reimbursement/templates/users/user_list.html
@@ -2,7 +2,14 @@
 
 {% load static i18n %}
 {% load crispy_forms_tags %}
+{% load rest_framework %}
 
+{% block nav_list_users %}active{% endblock %}
+
+{% block css %}
+{{ block.super }}
+<link rel="stylesheet" href="https://cdn.datatables.net/1.10.23/css/jquery.dataTables.min.css">
+{% endblock %}
 
 {% block header %}
 <div class="row">
@@ -14,7 +21,10 @@
         </div>
         <div class="col-lg-4">
           <div class="page-action">
-            <a href="#" class="btn btn-primary">{% trans "Create New" %}</a>
+            <!-- <a href="#" class="btn btn-primary">{% trans "Create New" %}</a> -->
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#create-user-modal">
+              {% trans "Create New" %}
+            </button>
           </div>
         </div>
       </div>
@@ -23,17 +33,115 @@
 </div>
 {% endblock %}
 
-{% block extra_page_content_class %}header-subheader-margin{% endblock %}
-
 {% block content %}
-
+<div class="card">
+    <div class="card-content p-4">
+        <table class="table" id="users-table">
+            <thead>
+                <th>Email</th>
+                <th>Employee Name</th>
+                <th>Employee Bank Account Number</th>
+            </thead>
+        </table>
+    </div>
+</div>
 {% endblock %}
 
+
+{% block modal %}
+<div class="modal fade" id="create-user-modal" role="dialog" aria-labelledby="createUserModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <form id="create-user-form" action="." class="form-horizontal" method="POST">
+        <div class="modal-header">
+          <h5 class="modal-title" id="createUserModalLabel">{% trans "Create User" %}</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          {% csrf_token %}
+          {% render_form serializer %}
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary btn-submit-close" data-dismiss="modal">{% trans "Close" %}</button>
+          <button type="button" class="btn btn-primary save-button">
+            <span id="save-text">{% trans "Save" %}</span>
+            <i id="save-icon" class=""></i>
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+{% endblock modal %}
+  
+
 {% block extra_js %}
+<script src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.min.js"></script>
 <script>
   $(document).ready(function(){
+    var table = $("#users-table").DataTable({
+        dom: "lrt<'d-flex justify-content-between datatables-info'ip>",
+        lengthChange: false,
+        pageLength: 25,
+        processing: false,
+        serverSide: true,
+        ajax: "{% url 'api:user-list' %}?format=datatables",
+        columns: [
+            {"data": "email"},
+            {"data": "employee__name"},
+            {"data": "employee__bank_account_number"},
+        ]
+    });
 
-
+    $(".save-button").on("click", function(e){
+      console.log($("#create-user-form").serialize());
+      e.preventDefault();
+      $.ajax({
+        type: "POST",
+        url: "{% url 'api:user-list' %}",
+        data: $("#create-user-form").serialize(),
+        beforeSend: function(jqXHR, settings){
+          jqXHR.setRequestHeader("x-csrftoken", "{{ csrf_token }}");
+          $(".btn-submit-close").attr("disabled", "disabled");
+          $(".btn-submit-close").attr("disabled", "disabled");
+          $(".save-button").attr("disabled", "disabled");
+          $(".save-button #save-text").html("Loading");
+          $(".save-button #save-icon").addClass("fa fa-spinner fa-spin");
+        },
+        success: function(response){
+          $(".messages").prepend(
+            '<div class="row">' + 
+              '<div class="col-lg-12 message-container">' +
+                '<div class="alert alert-success alert-dismissible my-4" data-auto-dismiss>' +
+                  'successful create new user.' +
+                  '<button type="button" class="close" data-dismiss="alert" aria-label="Close">' +
+                    '<span aria-hidden="true">×</span>' +
+                 ' </button>' +
+                '</div>' +
+              '</div>' +
+           ' </div>'
+          )
+          $(".modal").modal("hide");
+          table.ajax.reload(null, false);
+        },
+        error: function(error){
+          console.log(error.responseJSON);
+          $.each(error.responseJSON, function(field, error_msg) {
+            field = $("[name="+field+"]")
+            field.addClass("is-invalid");
+            error_message = '<span id="error_1_id_'+field+'" class="invalid-feedback"><strong>'+error_msg+'</strong></span>';
+            $(error_message).insertAfter(field);
+          });
+          $(".btn-submit-close").removeAttr("disabled", "disabled");
+          $(".btn-submit-close").removeAttr("disabled", "disabled");
+          $(".save-button").removeAttr("disabled", "disabled");
+          $(".save-button #save-text").html("Save");
+          $(".save-button #save-icon").removeClass("fa fa-spinner fa-spin");
+        }
+      });
+    })
   });
 </script>
 {% endblock %}
