--- a/e_reimbursement/templates/base.html
+++ b/e_reimbursement/templates/base.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>{% block title %}E-Reimbursement{% endblock title %}</title>
+  <title>{% block title %}{% endblock title %}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
@@ -36,12 +36,12 @@
       <ul class="nav">
         <li class="nav-header">
           <div class="d-flex justify-content-center align-self-stretch header">
-            <div class="header-inner"><h1>E-Reimbursement</h1></div>
+            <!-- <div class="header-inner"><h1>E-Reimbursement</h1></div> -->
           </div>
           
         </li>
         <li class="{% block nav_reimbursement %}{% endblock %}">
-          <a href="#">
+          <a href="{% url 'reimbursements:list' %}">
             <span>
               <i class="fas fa-file-invoice-dollar"></i>
               {% trans 'Reimbursement' %}
